# api/docs/swagger.json
@@ -54,11 +54,12 @@
                 "summary": "Create Scan Result",
                 "parameters": [
                     {
-                        "description": "Limit",
-                        "name": "limit",
+                        "description": "The Request Payload to create Scan Result",
+                        "name": "RequestPayload",
                         "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/dtos.CreateScanResultDto"
                         }
                     }
                 ],
@@ -147,6 +148,15 @@
                 "summary": "Update Scan Result",
                 "parameters": [
                     {
+                        "description": "The Request Payload to update Scan Result",
+                        "name": "RequestPayload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UpdateScanResultDto"
+                        }
+                    },
+                    {
                         "type": "integer",
                         "description": "Scan Result ID",
                         "name": "id",
@@ -166,6 +176,32 @@
         }
     },
     "definitions": {
+        "dtos.CreateScanResultDto": {
+            "type": "object",
+            "properties": {
+                "findings": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.FindingDto"
+                    }
+                },
+                "finished_at": {
+                    "type": "string"
+                },
+                "queued_at": {
+                    "type": "string"
+                },
+                "repository_name": {
+                    "type": "string"
+                },
+                "scanning_at": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.CreateScanResultResp": {
             "type": "object",
             "properties": {
@@ -178,6 +214,25 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.FindingDto": {
+            "type": "object",
+            "properties": {
+                "location": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "metadata": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "ruleId": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -207,23 +262,49 @@
         "dtos.ScanResultResp": {
             "type": "object",
             "properties": {
-                "findings": {},
+                "findings": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.FindingDto"
+                    }
+                },
                 "finished_at": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "queued_at": {
                     "type": "string"
                 },
                 "repository_name": {
-                    "type": "string",
-                    "example": "test"
+                    "type": "string"
                 },
                 "scanning_at": {
                     "type": "string"
                 },
                 "status": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.UpdateScanResultDto": {
+            "type": "object",
+            "properties": {
+                "findings": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.FindingDto"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "repository_name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
